--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>chihiro-py.github.io</title>
+</head>
+<body>
+    <h3>Hello World</h3>
+</body>
+</html>
